--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,18 +1,43 @@
 * {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    font-family: 'Dancing Script', cursive;
 }
-  #encabezado {
-      width: 100%;
-      height: 250px;
-      background-color: cadetblue;
+
+#encabezado {
+    width: 100%;
+    height: 200px;
+    background-image: url(../img/fondocabecera.jpg);
+    background-repeat: no-repeat;
+    background-size: 100%;
   }
 
-  #encabezado h1{
-    display: flex;
-    margin:0px;
-    color: rgb(221, 154, 30);
+#encabezado h1{
+    margin: 0px;
+    color: black;
     font-size: 40px;
-    height: 20px;
+    text-align: center;
+}
+
+#encabezado img {
+    display: flex;
+    margin: 0px;
+    padding: 0px;
+    border-radius: 50%;
+    width: 80px;
+    height: 80px;
+}
+
+#navegacion {
+    background-color: cadetblue;
+}
+
+#pie {
+    width: 100%;
+    height: 100px;
+    background-color: cadetblue;
+    text-align: center;
+    font-size: 18px;
+    float: none;
+    color: black;
 }
