--- a/css/estilos.css
+++ b/css/estilos.css
@@ -6,8 +6,8 @@
 
 #encabezado {
     width: 100%;
-    height: 200px;
-    background-image: url(../img/fondocabecera.jpg);
+    height: 150px;
+    background-image: url(../img/paraguana4.jpg);
     background-repeat: no-repeat;
     background-size: 100%;
   }
@@ -15,27 +15,38 @@
 #encabezado h1{
     margin: 0px;
     color: black;
-    font-size: 40px;
+    font-size: 70px;
     text-align: center;
 }
 
-#encabezado img {
+#navegacion {
     display: flex;
-    margin: 0px;
     padding: 0px;
-    border-radius: 50%;
-    width: 80px;
-    height: 80px;
+    margin: 0px;
+    background-color: #71BE9F;
+    height: 50px;
+    width: 100%;
 }
 
-#navegacion {
-    background-color: cadetblue;
+#navegacion a {
+    color: black;
+    text-decoration: none;
+    font-weight: bold;
+    padding: 15px 55px;
+}
+
+#navegacion a:hover {
+    background-color: #E4C048;
+}
+
+#cuerpo div img {
+    height: 400px;
 }
 
 #pie {
     width: 100%;
     height: 100px;
-    background-color: cadetblue;
+    background-color: #71BE9F;
     text-align: center;
     font-size: 18px;
     float: none;
