--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,7 +1,13 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
     font-family: 'Dancing Script', cursive;
+}
+
+main {
+    padding: 66px;
+    background-color: #F0E2B5;
 }
 
 #encabezado {
@@ -40,7 +46,164 @@
 }
 
 #cuerpo div img {
-    height: 400px;
+    display: flex;
+    height: 350px;
+    width: 35%;
+    border-radius: 50%;
+    float: left;
+    margin-right: 40px;
+    margin-bottom: 20px;
+    margin-top: 20px;
+}
+
+#cuerpo div p {
+    margin-bottom: 20px;
+    font-size: 20px;
+}
+
+#cuerpo div h2 {
+    margin-bottom: 20px;
+    font-size: 25px;
+}
+
+#cuerpo-platos h2 {
+    margin-bottom: 25px;
+    font-size: 25px;
+}
+
+.img1 {
+    display: flex;
+    height: 200px;
+    width: 200px;
+    border-radius: 50%;
+    float: left;
+    margin-right: 40px;
+    margin-bottom: 20px;
+    margin-top: 20px;
+ }
+
+ .img2 {
+    display: flex;
+    height: 200px;
+    width: 200px;
+    border-radius: 50%;
+    float: left;
+    margin-right: 40px;
+    margin-bottom: 20px;
+    margin-top: 20px;
+ }
+
+h3 {
+    margin-top: 20px;
+    margin-bottom: 15px;
+    font-size: 30px;
+}
+ 
+h3 span {
+    background-color: #71BE9F;
+    color: black;
+    border-radius: 50%;
+    display: inline-block;
+    text-align: center;
+    margin-right: 10px;
+    width: 30px;
+    padding: 2px;
+}
+
+p {
+    font-size: 20px;
+    margin-bottom: 25px;
+    margin-top: 10px;
+    margin-right: 30px;
+}
+
+.img3 {
+    display: flex;
+    height: 170px;
+    width: 200px;
+    border-radius: 50%;
+    float: left;
+    margin-right: 40px;
+    margin-bottom: 20px;
+    margin-top: 20px;
+}
+
+.img4 {
+    display: flex;
+    height: 200px;
+    width: 200px;
+    border-radius: 50%;
+    float: left;
+    margin-right: 40px;
+    margin-bottom: 20px;
+    margin-top: 60px;
+}
+
+.img5 {
+    display: flex;
+    height: 180px;
+    width: 200px;
+    border-radius: 50%;
+    float: left;
+    margin-right: 40px;
+    margin-bottom: 20px;
+    margin-top: 20px;
+}
+
+.img6 {
+    display: flex;
+    height: 160px;
+    width: 200px;
+    border-radius: 50%;
+    float: left;
+    margin-right: 40px;
+    margin-bottom: 20px;
+    margin-top: 20px;
+}
+
+.img7 {
+    display: flex;
+    height: 140px;
+    width: 200px;
+    border-radius: 50%;
+    float: left;
+    margin-right: 40px;
+    margin-bottom: 20px;
+    margin-top: 20px;
+}
+
+.img8 {
+    display: flex;
+    height: 170px;
+    width: 200px;
+    border-radius: 50%;
+    float: left;
+    margin-right: 40px;
+    margin-bottom: 20px;
+    margin-top: 40px;
+}
+
+.img9 {
+    display: flex;
+    height: 170px;
+    width: 200px;
+    border-radius: 50%;
+    float: left;
+    margin-right: 40px;
+    margin-bottom: 20px;
+    margin-top: 40px;
+}
+
+.img10 {
+    display: flex;
+    height: 200px;
+    width: 200px;
+    border-radius: 50%;
+    float: right;
+    margin-left: 40px;
+    margin-right: 40px;
+    margin-bottom: 20px;
+    margin-top: 40px;
 }
 
 #pie {
