--- a/css/estilos.css
+++ b/css/estilos.css
@@ -8,30 +8,46 @@
 main {
     padding: 66px;
     background-color: #F0E2B5;
+    display: flex;
+    flex-wrap: wrap;
+    min-width: 300px;
+    min-height: auto;
+}
+
+header {
+    display: flex;
+    flex-wrap: wrap;
+    min-width: auto;
 }
 
 #encabezado {
+    display: flex;
+    flex: 1;
+    flex-wrap: wrap;
+    min-width: 300px;
     width: 100%;
     height: 150px;
     background-image: url(../img/paraguana4.jpg);
     background-repeat: no-repeat;
     background-size: 100%;
-  }
+}
 
 #encabezado h1{
-    margin: 0px;
+    margin-top: 20px;
+    margin-left: 50px;
     color: black;
     font-size: 70px;
-    text-align: center;
 }
 
 #navegacion {
-    display: flex;
     padding: 0px;
     margin: 0px;
     background-color: #71BE9F;
     height: 50px;
     width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    min-width: 300px;
 }
 
 #navegacion a {
