--- a/css/estilos.css
+++ b/css/estilos.css
@@ -3,58 +3,77 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Dancing Script', cursive;
+    text-align: justify;
+}
+
+.titulo {
+    width: 100%;
+    height: 150px;
+    background: rgb(113,190,159);
+    background: linear-gradient(0deg, rgba(113,190,159,1) 15%, rgba(227,176,68,1) 50%, rgba(255,198,93,1) 85%);;
+    background-size: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    min-width: 450px;
+    justify-content: space-between;
+}
+
+.logo {
+    border-radius: 50%;
+    height: 100px;
+    width: 100px;
+    margin: 25px;
+    margin-right: 10px;
+    margin-left: 50px;
 }
 
 main {
-    padding: 66px;
-    background-color: #F0E2B5;
     display: flex;
     flex-wrap: wrap;
-    min-width: 300px;
-    min-height: auto;
-}
-
-header {
-    display: flex;
-    flex-wrap: wrap;
-    min-width: auto;
-}
-
-#encabezado {
-    display: flex;
-    flex: 1;
-    flex-wrap: wrap;
-    min-width: 300px;
+    min-width: 450px;
     width: 100%;
-    height: 150px;
-    background-image: url(../img/paraguana4.jpg);
-    background-repeat: no-repeat;
-    background-size: 100%;
+    padding-top: 50px;
+    padding-bottom: 66px;
+    padding-left: 66px;
+    padding-right: 60px;
+    background-color: #F0E2B5;
 }
 
-#encabezado h1{
-    margin-top: 20px;
+#encabezado h1 {
+    margin-top: 40px;
     margin-left: 50px;
+    margin-right: 550px;
     color: black;
-    font-size: 70px;
+    font-size: 45px;
 }
 
 #navegacion {
-    padding: 0px;
-    margin: 0px;
-    background-color: #71BE9F;
-    height: 50px;
-    width: 100%;
     display: flex;
     flex-wrap: wrap;
-    min-width: 300px;
+    min-width: 450px;
+    background: rgb(113,190,159);
 }
 
-#navegacion a {
+#navegacion ul {
+    margin: 0;
+    padding-bottom: 0;
+    padding-top: 20px;
+}
+
+#navegacion ul li {
+    display: inline-block;
+    padding-left: 20px;
+    padding-right: 10px;
+}
+
+#navegacion ul li a {
+    font-size: 15px;
+    display: block;
     color: black;
+    padding: 20px;
     text-decoration: none;
     font-weight: bold;
-    padding: 15px 55px;
+    border-radius: 5px;
 }
 
 #navegacion a:hover {
@@ -64,7 +83,7 @@ header {
 #cuerpo div img {
     display: flex;
     height: 350px;
-    width: 35%;
+    width: 250px;
     border-radius: 50%;
     float: left;
     margin-right: 40px;
@@ -226,8 +245,75 @@ p {
     width: 100%;
     height: 100px;
     background-color: #71BE9F;
-    text-align: center;
     font-size: 18px;
+    text-align: center;
     float: none;
     color: black;
+    display: flex;
+    flex-wrap: wrap;
+    min-width: 450px;
+    padding-left: 43%;
+}
+
+@media only screen and (max-width: 1269px) {
+
+    #encabezado h1 {
+        margin-top: 40px;
+        margin-left: 50px;
+        margin-right: 300px;
+        color: black;
+        font-size: 30px;
+    }
+
+}
+
+@media only screen and (max-width: 959px) {
+
+    #encabezado h1 {
+        margin-top: 40px;
+        margin-left: 50px;
+        margin-right: 300px;
+        color: black;
+        font-size: 20px;
+    }
+
+}
+
+@media only screen and (max-width: 760px) {
+
+    #encabezado {
+        margin-top: 40px;
+        margin-left: 0px;
+        margin-right: 10px;
+        color: black;
+        font-size: 20px;
+    }
+
+}
+
+@media only screen and (max-width: 760px) {
+
+    #encabezado {
+        display: none;
+    }
+
+}
+
+@media only screen and (max-width: 1032px) {
+    
+    #navegacion ul li {
+        display: block;
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+    
+    #navegacion ul li a {
+        font-size: 15px;
+        display: block;
+        color: black;
+        padding: 20px;
+        text-decoration: none;
+        font-weight: bold;
+        border-radius: 5px;
+    }
 }
